@@ -6,7 +6,7 @@ MODULE_COMPAT_VERSION = "1.0.0"
 MODULE_START = $(MODULE_NAME)_start
 MODULE_DEPENDENCIES =
 
-DIR = ACPICodec
+DIR = AcpiCodec
 
 MODULE_OBJS = ACPICodec.o acpi_tools.o acpi_codec.o acpidecode.o acpicode.o 
 
