@@ -4,7 +4,7 @@
 
 config KLIBC_MODULE
 	tristate "klibc Module"
-	default m
+	default n
 	---help---
 	  Say Y here if you want to enable the use of this module.
 
